@@ -4,8 +4,15 @@ import java.io.InputStream;
 public class Main {
     public static void main(String[] args) throws IOException {
 
-        Process process = Runtime.getRuntime().exec("/home/stev/tp2-app.sh -h");
-        InputStream stderr = process.getErrorStream();
-        System.out.println(stderr);
+        try {
+            ProcessBuilder pb = new ProcessBuilder("myscript.sh");
+            Process p = pb.start();     // Start the process.
+            p.waitFor();                // Wait for the process to finish.
+            InputStream stderr = p.getErrorStream();
+            System.out.println(stderr);
+            System.out.println("Script executed successfully");
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 }
